--- a/test.html
+++ b/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scalable=no" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Search block</title>
   </head>
   <body>
     <svg width="0" height="0" class="hidden">
